CHROMIUM: drm/i915: fix connection status check from dp_dpcd_detect

I18f5457817badc3a9fdf4ac863d39fcdbdf51c70 also missed a check of connection
status returned from intel_dp_dpcd_detect resulting in monitors being
detected even if only adapter without monitor attached is plugged in.

BUG=chromium:706149
TEST=connect Apple USB-C-HDMI adapter and see if there is monitor detected\
using modeprint i915 in shell.

Change-Id: Iae3fd7667b2c909a420472f736f88e14465d226c
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/480980
Commit-Ready: Stéphane Marchesin <marcheu@chromium.org>
Tested-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: Gurchetan Singh <gurchetansingh@chromium.org>